# n9-button-monitor

./: .gitignore  AUTHORS  CMakeLists.txt  README  README.md  adv-button-monitor.desktop  build.sh  camera.py  install.sh  makefile  n9-button-monitor.conf  n9-button-monitor.ini  n9-button-monitor.py  start.sh  stop.sh
data/: CMakeLists.txt  default-config.ini  led-dbus.conf  n9-button-monitor.conf  n9-button-monitor.desktop  n9bm-toggle.desktop  off.desktop  on.desktop  startstop.sh
debian/: .gitignore  README  README.Debian  adv-button-monitor.aegis  changelog  control  copyright  n9-button-monitor.aegis  postinst  prerm  rules
n9bm-toggle/: .gitignore  README  build.sh  n9bm-toggle.pro
n9bm-toggle/debian/: changelog  control  n9bm-toggle.aegis  n9bm-toggle.install  postinst  rules
n9bm-toggle/src/: mtabstracttoggle.h  n9bmtoggle.cpp  n9bmtoggle.h
scripts/: build-deps.sh  clean.sh  configure.sh  make.sh  makedeb.sh  mount.sh  prune.sh
source/: clicktimer.py  guiconfig.py  on.desktop
src/: CMakeLists.txt  actions.py  camera.py  clicktimer.py  config.py  dbusbtn.py  guiconfig.py  led-dbus.py  ledpattern.py  n9-button-monitor.py  prxbtn.py  startstop.sh  torch.py
